--- a/sideberry.css
+++ b/sideberry.css
@@ -3,5 +3,5 @@
 }
 
 .t-box {
-  padding-left: 2px;
-}
+  padding-left: 4px;
+} 
